@@ -7,6 +7,20 @@
 
     <properties>
         <p.type>war</p.type>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <spring_version>5.0.3.RELEASE</spring_version>
+        <jetty_version>9.4.8.v20171121</jetty_version>
+        <hapi_version>3.5.0-SNAPSHOT</hapi_version>
+        <cql_engine_version>1.2.48-SNAPSHOT</cql_engine_version>
+
+        <!-- Exec plugin properties (used when starting server) -->
+        <skipTests>false</skipTests>
+        <dev>true</dev>
+        <protocolAndHost>http://localhost:8080</protocolAndHost>
+        <dstu3Path>cqf-ruler/baseDstu3</dstu3Path>
+        <dstu2Path>cqf-ruler/baseDstu2</dstu2Path>
+        <r4Path>cqf-ruler/baseR4</r4Path>
     </properties>
     <packaging>${p.type}</packaging>
 
@@ -31,13 +45,13 @@
         <dependency>
             <groupId>org.opencds.cqf</groupId>
             <artifactId>cql-engine</artifactId>
-            <version>1.2.48-SNAPSHOT</version>
+            <version>${cql_engine_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.opencds.cqf</groupId>
             <artifactId>cql-engine-fhir</artifactId>
-            <version>1.2.48-SNAPSHOT</version>
+            <version>${cql_engine_version}</version>
         </dependency>
 
         <dependency>
@@ -62,46 +76,46 @@
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-base</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
         </dependency>
 
         <!-- At least one "structures" JAR must also be included -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-structures-dstu2</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
         </dependency>
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-structures-dstu3</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
         </dependency>
 
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-converter</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
         </dependency>
 
         <!-- This dependency includes the JPA server itself, which is packaged separately from the rest of HAPI FHIR -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-jpaserver-base</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
         </dependency>
 
         <!-- This dependency is used for the "FHIR Tester" web app overlay -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-testpage-overlay</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
             <type>war</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-testpage-overlay</artifactId>
-            <version>3.4.0</version>
+            <version>${hapi_version}</version>
             <classifier>classes</classifier>
             <scope>provided</scope>
         </dependency>
@@ -131,7 +145,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- If you are using HAPI narrative generation, you will need to include Thymeleaf as well. Otherwise the following can be omitted. -->
@@ -145,73 +159,73 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-messaging</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
-            <version>5.0.3.RELEASE</version>
+            <version>${spring_version}</version>
         </dependency>
 
 
@@ -254,33 +268,52 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlets</artifactId>
-            <version>9.4.8.v20171121</version>
-            <scope>test</scope>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlet</artifactId>
-            <version>9.4.8.v20171121</version>
-            <scope>test</scope>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>9.4.8.v20171121</version>
-            <scope>test</scope>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>9.4.8.v20171121</version>
-            <scope>test</scope>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
-            <version>9.4.8.v20171121</version>
-            <scope>test</scope>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-client</artifactId>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-server</artifactId>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>${jetty_version}</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+
         <dependency>
             <groupId>com.phloc</groupId>
             <artifactId>phloc-schematron</artifactId>
@@ -339,12 +372,28 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.8.v20171121</version>
+                <version>${jetty_version}</version>
                 <configuration>
                     <systemProperties>
                         <systemProperty>
                             <name>org.eclipse.jetty.server.Request.maxFormContentSize</name>
-                            <value>500000</value> <!-- or any other value -1 is for max -->
+                            <value>-1</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>fhir.baseurl.r4</key>
+                            <value>${protocolAndHost}/${r4Path}</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>fhir.baseurl.dstu3</key>
+                            <value>${protocolAndHost}/${dstu3Path}</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>fhir.baseurl.dstu2</key>
+                            <value>${protocolAndHost}/${dstu2Path}</value>
+                        </systemProperty>
+                        <systemProperty>
+                            <key>testmode.local</key>
+                            <value>${dev}</value>
                         </systemProperty>
                     </systemProperties>
                     <webApp>
@@ -360,12 +409,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <packagingExcludes>
-                        WEB-INF/lib/spring-aop-4.3.10.RELEASE.jar,
-                        WEB-INF/lib/spring-expression-4.3.10.RELEASE.jar,
-                        WEB-INF/lib/spring-jdbc-4.3.10.RELEASE.jar,
-                        WEB-INF/lib/stax-api-1.0-2.jar
-                    </packagingExcludes>
                     <archive>
                         <manifestEntries>
                             <Build-Time>${maven.build.timestamp}</Build-Time>
@@ -437,6 +480,16 @@
                     <includes>
                         <include>org.opencds.cqf.**</include>
                     </includes>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <skipTests>${skipTests}</skipTests>
+                    <systemPropertyVariables>
+                        <fhir.baseurl.r4>${protocolAndHost}/${r4Path}</fhir.baseurl.r4>
+                        <fhir.baseurl.dstu3>${protocolAndHost}/${dstu3Path}</fhir.baseurl.dstu3>
+                        <fhir.baseurl.dstu2>${protocolAndHost}/${dstu2Path}</fhir.baseurl.dstu2>
+                        <testmode.local>${dev}</testmode.local>
+                    </systemPropertyVariables>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -448,55 +501,57 @@
             </plugin>
 
             <!--<plugin>-->
-            <!--<groupId>org.apache.tomcat.maven</groupId>-->
-            <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-            <!--<configuration>-->
-            <!--<path>/</path>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>maven</executable>
-                    <mainClass>org.opencds.cqf.helpers.XlsxToValueSet</mainClass>
-                    <arguments>
-                        <argument>-b</argument>
-                        <argument>-o</argument>
-                        <argument>-s</argument>
-                        <argument>-v</argument>
-                        <argument>-c</argument>
-                        <argument>-d</argument>
-                        <argument>-u</argument>
-                        <argument>-outDir</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
-            <!-- Use when publishing -->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-gpg-plugin</artifactId>-->
-                <!--<version>1.6</version>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>exec-maven-plugin</artifactId>-->
+                <!--<version>1.5.0</version>-->
                 <!--<executions>-->
                     <!--<execution>-->
-                        <!--<id>sign-artifacts</id>-->
-                        <!--<phase>verify</phase>-->
                         <!--<goals>-->
-                            <!--<goal>sign</goal>-->
+                            <!--<goal>java</goal>-->
                         <!--</goals>-->
                     <!--</execution>-->
                 <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<executable>maven</executable>-->
+                    <!--<mainClass>org.opencds.cqf.CqfRulerApp</mainClass>-->
+                    <!--<arguments>-->
+                        <!--<argument>${protocolAndHost}</argument>-->
+                    <!--</arguments>-->
+                    <!--<systemProperties>-->
+                        <!--<systemProperty>-->
+                            <!--<key>fhir.baseurl.r4</key>-->
+                            <!--<value>${protocolAndHost}/${r4Path}</value>-->
+                        <!--</systemProperty>-->
+                        <!--<systemProperty>-->
+                            <!--<key>fhir.baseurl.dstu3</key>-->
+                            <!--<value>${protocolAndHost}/${dstu3Path}</value>-->
+                        <!--</systemProperty>-->
+                        <!--<systemProperty>-->
+                            <!--<key>fhir.baseurl.dstu2</key>-->
+                            <!--<value>${protocolAndHost}/${dstu2Path}</value>-->
+                        <!--</systemProperty>-->
+                        <!--<systemProperty>-->
+                            <!--<key>testmode.local</key>-->
+                            <!--<value>${dev}</value>-->
+                        <!--</systemProperty>-->
+                    <!--</systemProperties>-->
+                <!--</configuration>-->
             <!--</plugin>-->
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
